GET position/:id/interviewflow
